--- a/requirements.txt
+++ b/requirements.txt
@@ -18,8 +18,8 @@ protobuf==3.6.0
 scikit-learn==0.19.1
 scipy==1.1.0
 six==1.11.0
-sklearn==0.0
+scikit-learn
 tensorboard==1.8.0
-tensorflow==1.8.0
+tensorflow-gpu==1.8.0
 termcolor==1.1.0
 Werkzeug==0.14.1
